--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,8 @@ jobs:
 
 workflows:
   build-and-test-workflow:
+    when:
+      condition:
+        equal: [master, << pipeline.git.branch >>]
     jobs:
       - build-and-test-architecture-toolkit-job
